# pia-mcp-local

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _build-test.sh  filter_fix_demo.py  pyproject.toml  remote_tools.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  question.yml  security.yml
.github/workflows/: lint.yml  publish.yml  tests.yml
src/pia_mcp_server/: __init__.py  __main__.py  config.py  server.py
src/pia_mcp_server/prompts/: __init__.py  handlers.py
src/pia_mcp_server/tools/: __init__.py  fetch.py  pia_search.py  pia_search_facets.py  rate_limits.py  search.py  search_tools.py
tests/: __init__.py  test_config.py  test_server.py  test_tools.py
utils/: interrogate_server.py
